refactored CargoCode
